# flowhunt-voicebot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SIPTRUNK.md  docker-compose.yml  listen_transcribe_repeat.py  pyproject.toml  requirements.txt  sip_audiosocket_bridge.py
.github/: dependabot.yml
agents/: agent_provider_registry.py  anthropic_agent.py  communication_agent.py  fast_test_agent.py  local_command_agent.py  openai_agent.py
asterisk/: docker-entrypoint.sh  extensions-docker.conf  extensions.conf.example  pjsip.conf.example
docs/: API.md  CONVERSATION_FLOWS.md  DASHBOARD.md  DEPENDABOT_AUTOMATION.md  DEPLOYMENT_TOPOLOGY.md  DURABLE_STATE.md  E2E_TESTING.md  EXECUTION_MODEL.md  FAILOVER_AND_DRAINING.md  FLOWHUNT_API_SURFACE.md  MULTIMODAL.md  OBSERVABILITY.md  PRODUCTION_RUNBOOK.md  PROVIDERS.md  PROVIDER_CONFIG.md  REALTIME_AUDIO.md  SCALING.md  SECURITY_AND_RETENTION.md  SIP_MEDIA_PLANE.md  SUBAGENTS.md  TASK_LIFECYCLE.md  TRANSPORTS.md  VOICEBOT_WIDGET.md  WEBRTC_MEDIA_PLANE.md  WORKSPACE_MODEL.md
tests/: storage_contract_cases.py  test_access_logging.py  test_agent_claim_clients.py  test_agent_coordination.py  test_agent_provider_registry.py  test_agent_task_tracker.py  test_agent_tasks.py  test_agent_tools_api.py  test_api_call_control.py  test_api_limits.py  test_api_sip_trunks.py  test_api_surface.py  test_api_webrtc.py  test_asterisk_control.py  test_call_actor.py  test_call_recording.py  test_call_session.py  test_call_state.py  test_call_state_store.py  test_communication_agent.py  test_config.py  test_dashboard.py  (+59 more)
(+118 files in other folders)
